# HERBS_Server

./: .gitignore  Cargo.toml  README.md
assets/: data.conf  nodes.txt
src/: apiary.rs  database.rs  device.rs  firmware.rs  main.rs  shared.rs
