[package]
name = "herbs_http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10.73" }
chrono = { version = "0.4.41", features = ["serde"] }
mongodb = "3.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = "1.16.0"
bson = "2.15"
